--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 s_down/
 notes.txt
-
+test_images/
 
 # Created by https://www.toptal.com/developers/gitignore/api/django,python,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python,venv
